--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0 2rem;
+  background-image: url(../public/bg.jpg);
 }
 
 .main {
@@ -80,9 +81,11 @@
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
+  background-color: #fafafa;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  max-width: 600px;
+  text-align: center;
 }
 
 .card:hover,
@@ -108,6 +111,14 @@
   margin-left: 0.5rem;
 }
 
+.btn{
+  background-color: darkslategrey;
+  color: #fafafa;
+  border: none;
+  padding: 0.5rem 2rem;
+  border-radius: 1rem;
+  cursor: pointer;
+}
 @media (max-width: 600px) {
   .grid {
     width: 100%;
